# django-2-dekux-x

./: db.sqlite3  pyproject.toml
hw2/: settings.py  urls.py
news/: admin.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
news/migrations/: 0001_initial.py  0002_alter_news_created_at_comment.py
news/static/news/: style.css
news/templates/news/: base.html  create.html  detail.html  edit.html  index.html
news/templates/registration/: login.html  sign_up.html
